# herald

./: .gitignore  .pylintrc  Dockerfile  README.md  m87.bat  m87.py  m87.sh  pyproject.toml  run.bat  run.py  tox.ini
.github/workflows/: test_board.yml  test_integration.yml  test_lint.yml  test_static.yml  test_unit.yml
engine/: algorithms.py  alphabeta_quiescence.py  alphabeta_simple.py  best_move.py  bestmove.py  board.py  board_simple.py  constants.py  data_structures.py  eval_simple.py  evaluation.py  hashtable.py  m87  move_simple.py  perft.py  requirements.txt  search.py  transposition_table.py
evolution/: versus.py
src/: __init__.py  __main__.py  board.py  configuration.py  constants.py  data_structures.py  evaluation.py  iterative_deepening.py  move_ordering.py  pruning.py  quiescence.py  root_search.py  search.py  time_management.py  utils.py
src/engine/: algorithms.py  analysis.py  best_move.py  board.py  configuration.py  constants.py  data_structures.py  evaluation.py  iterative_deepening.py  move_ordering.py  pruning.py  quiescence.py  search.py  time_management.py  transposition_table.py
src/herald/: __init__.py  __main__.py  algorithms.py  alphabeta.py  analysis.py  board.py  configuration.py  constants.py  data_structures.py  evaluation.py  iterative_deepening.py  minimax.py  move_ordering.py  pruning.py  quiescence.py  search.py  time_management.py  transposition_table.py  transposition_table.pyi  utils.py
tests/: fens.py  test_algorithms.py  test_board.py  test_node_count.py  test_selfplay.py  test_transposition_table.py  win_at_chess.py
tests/epd/: README.md  arasan21.epd  colditz.epd  transposition_table.epd  zugzwang.epd
tests/integration/: alphabeta.py  minimax.py  negamax.py  negamax_mo.py  test_algorithms.py  test_board.py  test_quiescence.py  test_tt.py
tests/unit/: test_board.py  test_pruning.py  test_time_management.py
