[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "herald"
version = "0.19.17"
description = "Chess engine"
readme = "README.md"
authors = [{ name = "Niels Robin-Aubertin", email = "git@niels.fr" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GPLv3 License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["chess", "engine"]
dependencies = []
requires-python = ">=3.10"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--import-mode=importlib"

[tool.black]
line-length = 99

[tool.isort]
line_length = 99
profile = "black"

[tool.flake8]
max-line-length = 99
max-doc-length = 99
max-complexity = 40
extend-ignore = "E203"
exclude = [
  ".git", "__pycache__",
  ".tox", "build", "dist",
  "*.egg_info", "venv",
  "tests/not_finished", "tests/epd", "tests/fen"
]
select = ["E", "W", "F", "C", "N", "R", "D", "H"]
# Ignore W503, E501 because using black creates errors with this
ignore = ["W503", "E501", "D1", "E722"]
# D100, D101, D102, D103: Ignore missing docstrings in tests
per-file-ignores = ["tests/*:D100,D101,D102,D103,D104"]
docstring-convention = "google"
