[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "herald"
version = "0.19.17"
description = "Chess engine"
readme = "README.md"
authors = [{ name = "Niels Robin-Aubertin", email = "git@niels.fr" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GPLv3 License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["chess", "engine"]
dependencies = []
requires-python = ">=3.10"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--import-mode=importlib"

[tool.black]
line-length = 99
target-version = ["py310"]

[tool.isort]
line_length = 99
profile = "black"

[tool.flake8]
max-line-length = 99
max-doc-length = 99
max-complexity = 40
extend-ignore = "E203"
exclude = [
  ".git", "__pycache__",
  ".tox", "build", "dist",
  "*.egg_info", "venv",
  "tests/not_finished", "tests/epd", "tests/fen"
]
select = ["E", "W", "F", "C", "N", "R", "D", "H"]
# Ignore W503, E501 because using black creates errors with this
ignore = ["W503", "E501", "D1", "E722"]
# D100, D101, D102, D103: Ignore missing docstrings in tests
per-file-ignores = ["tests/*:D100,D101,D102,D103,D104"]
docstring-convention = "google"

[tool.mypy]
ignore_missing_imports = true
explicit_package_bases = true
namespace_packages = true

[tool.pylint.design]
max-args = 5
max-attributes = 7
max-bool-expr = 6
max-branches = 12
max-locals = 15
max-parents = 7
max-public-methods = 20
max-returns = 6
max-statements = 50
min-public-methods = 2

[tool.pylint.format]
max-line-length = 100
max-module-lines = 1000

[tool.pylint."messages control"]
disable = [
  "bad-inline-option",
  "bare-except",
  "broad-exception-raised",
  "consider-using-dict-items",
  "deprecated-pragma",
  "duplicate-code",
  "file-ignored",
  "global-statement",
  "invalid-name",
  "locally-disabled",
  "missing-class-docstring",
  "missing-function-docstring",
  "missing-module-docstring",
  "raw-checker-failed",
  "redefined-outer-name",
  "suppressed-message",
  "too-many-arguments",
  "too-many-branches",
  "too-many-instance-attributes",
  "too-many-locals",
  "too-many-nested-blocks",
  "too-many-return-statements",
  "too-many-statements",
  "useless-suppression",
  "use-symbolic-message-instead",
]
