[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "herald"
version = "0.21"
description = "Chess engine"
readme = "README.md"
authors = [{ name = "Niels Robin-Aubertin", email = "git@niels.fr" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: GPLv3 License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["chess", "engine"]
dependencies = []
requires-python = ">=3.10"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--import-mode=importlib"
pythonpath = ["src/", "tests/integration/"]
markers = [
  "assumed_right: marks tests that are assumed to pass from one commit to another",
]

[tool.black]
line-length = 99
target-version = ["py310"]

[tool.ruff]
line-length = 99

[tool.mypy]
ignore_missing_imports = true
explicit_package_bases = true
namespace_packages = true
